# calm

./: .flake8  .travis.yml  README.md  TODO  buffering_smtp_handler.py  calm  calm-cron-script  calm-tool.sh  calm-vs-upset-diff-script  calm-wrapper  calm.py  calm.sh  common_constants.py  compare-arches  cygwin.py  extract-setup-version  extract_setup_version  hint.py  irk.py  maintainers.py  mkmaintdir  mkpkgdir  mksetupini  package.py  past_mistakes.py  pep8  pkg2html  pkg2html.py  profile-calm  queue.py  requirements.txt  setup.cfg  setup.py  setup_exe.py  spelling.py  stalepkgs  test.sh  tests.py  upload-scan  upload-test-prepare  (+6 more)
.github/workflows/: calm.yaml
calm/: abeyance_handler.py  buffering_smtp_handler.py  calm.py  common_constants.py  compare-arches  db.py  dedupsrc.py  find-duplicates.py  fix-annotate-perl-hint.py  fix-invalid-key-hint.py  fix-missing-cygwin-dep.py  fix-missing-src-hint-info.py  fix-missing-src-hint.py  fix-requires-by-linkage.py  fix-requires-by-path.py  fix-skip-only-hint.py  fixes.py  hint-migrate.py  hint.py  irk.py  logfilters.py  mail-inactive-maintainers.py  maintainers.py  missing-repos.py  mkgitoliteconf.py  mkmaintdir  mksetupini.py  movelist.py  package.py  past_mistakes.py  pkg2html.py  queue.py  repology.py  reports.py  scallywag_db.py  setup_exe.py  sort-versions.py  spelling.py  tool.py  tool_util.py  (+5 more)
test/: __init__.py  mail-test  test_calm.py  test_entrypoints.py  utils.py
testdata/: .gitignore
testdata/inifile/: setup.ini.expected
testdata/pkglist/: cygwin-pkg-maint  (+1 more)
tests/: __init__.py  calm_test.py  tests.py
(+520 files in other folders)
