[metadata]
name = calm
version = 20250329
author = Jon Turney
author_email = jon.turney@dronecode.org.uk
description = Cygwin package server toolkit
long_description = file: README.md
license = MIT
url = https://cygwin.com/git/?p=cygwin-apps/calm.git

[options]
packages = calm
install_requires =
  inotify ; sys_platform=="linux"
  license_expression
  markdown
  peewee
  pidlockfile
  python-daemon
  xtarfile[zstd]

[options.entry_points]
console_scripts =
 calm = calm.calm:main
 calm-tool = calm.tool:main
 mkgitoliteconf = calm.mkgitoliteconf:main
 mksetupini = calm.mksetupini:main
